tests/baselines/reference/APISample_WatchWithDefaults.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8910,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8910,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9170,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9170,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9520,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9520,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9544,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9544,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9631,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9631,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10796,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10796,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10807,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10807,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10817,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10817,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10892,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10892,47): error TS1005: ';' expected.
typescript_standalone.d.ts(10949,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10949,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11003,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11003,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11023,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11023,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11033,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11033,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11067,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11067,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11070,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11070,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11074,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11074,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11092,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11092,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11118,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11118,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11121,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11121,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11133,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11133,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11163,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11163,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11197,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11197,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11208,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11208,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11232,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11232,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11240,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11240,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11244,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11244,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11274,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11274,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11317,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11317,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11504,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11504,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11506,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11506,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11510,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11510,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11512,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11512,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11514,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11514,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11516,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11516,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11518,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11518,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11527,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11527,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11529,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11529,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11531,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11531,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11533,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11533,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11535,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11535,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11537,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11537,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11539,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11539,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11541,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11541,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11543,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11543,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11545,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11545,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11547,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11547,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11549,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11549,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11551,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11551,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11553,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11553,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11555,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11555,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11565,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11567,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11569,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11571,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11573,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11573,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11575,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11575,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11577,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11579,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11579,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11581,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11581,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11653,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11653,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11655,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11655,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11657,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11657,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11659,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11659,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11735,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11735,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_WatchWithDefaults.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. This uses default sys interface without having to pass anything
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var console: any;
    
    import ts = require("typescript");
    
    function watchMain() {
        const configPath = ts.findConfigFile(/*searchPath*/ "./", ts.sys.fileExists, "tsconfig.json");
        if (!configPath) {
            throw new Error("Could not find a valid 'tsconfig.json'.");
        }
    
        // TypeScript can use several different program creation "strategies":
        //  * ts.createEmitAndSemanticDiagnosticsBuilderProgram,
        //  * ts.createSemanticDiagnosticsBuilderProgram
        //  * ts.createAbstractBuilder
        // The first two produce "builder programs". These use an incremental strategy to only re-check and emit files whose
        // contents may have changed, or whose dependencies may have changes which may impact change the result of prior type-check and emit.
        // The last uses an ordinary program which does a full type check after every change.
        // Between `createEmitAndSemanticDiagnosticsBuilderProgram` and `createSemanticDiagnosticsBuilderProgram`, the only difference is emit.
        // For pure type-checking scenarios, or when another tool/process handles emit, using `createSemanticDiagnosticsBuilderProgram` may be more desirable.
    
        // Note that there is another overload for `createWatchCompilerHost` that takes a set of root files.
        const host = ts.createWatchCompilerHost(configPath, {}, ts.sys);
    
        // You can technically override any given hook on the host, though you probably don't need to.
        // Note that we're assuming `origCreateProgram` and `origPostProgramCreate` doesn't use `this` at all.
        const origCreateProgram = host.createProgram;
        host.createProgram = (rootNames, options, host, oldProgram) => {
            console.log("** We're about to create the program! **");
            return origCreateProgram(rootNames, options, host, oldProgram);
        }
        const origPostProgramCreate = host.afterProgramCreate;
    
        host.afterProgramCreate = program => {
            console.log("** We finished making the program! **");
            origPostProgramCreate!(program);
        };
    
        // `createWatchProgram` creates an initial program, watches files, and updates the program over time.
        ts.createWatchProgram(host);
    }
    
    watchMain();
    